# meerkat

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CNAME  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  VideoCell validation.ipynb  blog.html  components.html  index.html  logs  package-lock.json  package.json  pyproject.toml  pytest.ini  scratch.py  setup.py  test  vite-manifest.json
.github/ISSUE_TEMPLATE/: bug_report.md
_app/: version.json
demo/: audio-embed.ipynb  chat.py  chatgpt.py  chest-xray-exploration.ipynb  diffusiondb  diffusiondb.py  display.ipynb  display.py  error-analysis.py  filter-sort.py  filter.py  flash-fill.py  flowbite.py  gallery.py  gpt-index.py  image-search.py  image_search.py  match-2.py  match.py  multiple-sort.py  multiple_sort.py  prompt.py  quickstart-interactive.py  reader-study.py  sam.py  sort.py  tabbed-views.py  table.py  tutorial-0.py  tutorial-1.py  tutorial-2.py  tutorial-filter-sort.py  tutorial-image-gallery.py  tutorial-qa.py  tutorial-query-llm.py  tutorial-reactive-viewer.py  xkcd.py
docs/: Makefile  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
examples/: 01-meerkat_intro.ipynb  02-images.ipynb  03_med_img.ipynb  04-21_groupby.ipynb  4-20_sort.ipynb  Untitled.ipynb  demo_groupby.py  eeg_data_demo.ipynb  kmeans.py  mk.ipynb
meerkat/: __init__.py  block_manager.py  config.py  constants.py  dataframe.py  datapanel.py  display.py  env.py  errors.py  ibis.py  provenance.py  row.py  state.py  types.py  version.py
mosaic/: __init__.py  datapane.py  datapanel.py  errors.py  provenance.py
robustnessgym/: __init__.py
scripts/: README.md  build_npm.sh
tests/: testbeds.py  utils.py
website/: .gitignore  package-lock.json  package.json  reroute.py  svelte.config.js  tailwind.config.cjs  vite.config.ts
(+2249 files in other folders)
